name:                doomsday
version:             0.1.0.0
synopsis:            Practise calculating day of week
description:         Please see README.md
homepage:            https://github.com/jshholland/doomsday#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Holland
maintainer:          josh@inv.alid.pw
copyright:           2016 Josh Holland
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable doomsday
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1 && < 2